Work in process confusion/enlightenment about threads